--- a/site/site/src/app/app.component.html
+++ b/site/site/src/app/app.component.html
@@ -4,6 +4,13 @@
     <a class="nav-link text-white" routerLink="/hello">Hello World</a>
     <a class="nav-link text-white" >Números</a>
     <a class="nav-link text-white" >Calculadora</a>
+
   </nav>
 </div>
+<div style="text-align:center">
+  <h1>
+    <cliente-salvar></cliente-salvar>
+  </h1>
+</div>
+
 <router-outlet></router-outlet>
