--- a/site/site/src/app/app.component.html
+++ b/site/site/src/app/app.component.html
@@ -12,5 +12,10 @@
     <cliente-salvar></cliente-salvar>
   </h1>
 </div>
+<div style="text-align:center">
+  <h1>
+    <produto-salvar></produto-salvar>
+  </h1>
+</div>
 
 <router-outlet></router-outlet>
